--- a/src/components/work/Projects.module.css
+++ b/src/components/work/Projects.module.css
@@ -14,5 +14,6 @@
 @media (max-width: 526px) {
     .projectsContainer {
         padding: 0;
+        margin: 0.3rem;
     }
 }
